--- a/MCCHD_covid_figures_new.Rmd
+++ b/MCCHD_covid_figures_new.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of February 15, 2021"
+date: "Data as of March 1, 2021"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -132,12 +132,12 @@ age_count_plot
 ```{r}
 age_n <- covid_data %>% 
    filter(!is.na(age_group) & !is.na(test_date)) %>% 
-   filter(test_date > "2020-09-01")
+   filter(test_date > "2020-11-01")
 age_cases <- sum(age_n$case)
 
 # Age group line plot - counts by month
 age_count_month_plot <- covid_data %>% 
-   filter(test_date > "2020-09-01" & test_date < Sys.Date()) %>% 
+   filter(test_date > "2020-11-01" & test_date < Sys.Date()) %>% 
    mutate(week_of_year = cut.Date(test_date, breaks = "1 week", start.on.monday = FALSE),
           week_of_year = ymd(week_of_year)) %>% 
    group_by(age_group, week_of_year) %>% 
@@ -194,13 +194,13 @@ age_count_month_plot
 ```{r}
 age_n <- covid_data %>% 
    filter(!is.na(age_group3) & !is.na(test_date)) %>% 
-   filter(test_date > "2020-09-01") %>% 
+   filter(test_date > "2020-11-01") %>% 
    filter(age < 30)
 age_cases <- sum(age_n$case)
 
 # Age group line plot - counts by month
 age_count_month_plot2 <- covid_data %>% 
-   filter(test_date > "2020-09-01" & test_date < Sys.Date()) %>% 
+   filter(test_date > "2020-11-01" & test_date < Sys.Date()) %>% 
    filter(age < 30) %>% 
    mutate(week_of_year = cut.Date(test_date, breaks = "1 week", start.on.monday = FALSE),
           week_of_year = ymd(week_of_year)) %>% 
@@ -298,12 +298,12 @@ age_incidence_plot_bar
 ```{r}
 age_n <- covid_data %>% 
    filter(!is.na(age_group) & !is.na(test_date)) %>% 
-   filter(test_date > "2020-09-01")
+   filter(test_date > "2020-11-01")
 age_cases <- sum(age_n$case)
 
 # Incidence line plot by age and month
 age_incidence_plot_line <- covid_data %>% 
-   filter(test_date > "2020-09-01" & test_date < Sys.Date()) %>% 
+   filter(test_date > "2020-11-01" & test_date < Sys.Date()) %>% 
    mutate(week_of_year = cut.Date(test_date, breaks = "1 week", start.on.monday = FALSE),
           week_of_year = ymd(week_of_year)) %>% 
    select(case, age_group, age_group_percent, county_pop, week_of_year) %>% 
@@ -370,13 +370,13 @@ age_incidence_plot_line
 ```{r}
 age_n <- covid_data %>% 
    filter(!is.na(age_group) & !is.na(test_date)) %>% 
-   filter(test_date > "2020-09-01") %>% 
+   filter(test_date > "2020-11-01") %>% 
    filter(age < 30)
 age_cases <- sum(age_n$case)
 
 # Incidence line plot by age and month
 age_incidence_plot_line <- covid_data %>% 
-   filter(test_date > "2020-09-01" & test_date < Sys.Date()) %>% 
+   filter(test_date > "2020-11-01" & test_date < Sys.Date()) %>% 
    filter(age < 30) %>% 
    mutate(week_of_year = cut.Date(test_date, breaks = "1 week", start.on.monday = FALSE),
           week_of_year = ymd(week_of_year)) %>% 
@@ -445,7 +445,7 @@ age_incidence_plot_line
 # Epi curve - test date
 
 plot_data <- covid_data %>% 
-   filter(test_date > "2020-08-31" & test_date < Sys.Date()) 
+   filter(test_date > "2020-10-31" & test_date < Sys.Date()) 
 
 total_cases <- sum(plot_data$case)
 date_today <- format(Sys.Date(), "%d %b %Y")
@@ -456,14 +456,6 @@ epi_curve_test_date <- plot_data %>%
      geom_rect(aes(xmin = Sys.Date() - 14, xmax = Sys.Date(), ymin=0, ymax=Inf),
                fill = "gray80", alpha = 0.05) +
      geom_col(aes(test_date, case), color = "steelblue") +
-     geom_vline(xintercept = as.numeric(as.Date("2020-09-07")), color = "black", 
-              size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-09-07"), label = "Labor Day", vjust = -0.5,
-                 y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2020-10-31")), color = "black", 
-              size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-10-31"), label = "Halloween", vjust = -0.5,
-                 y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-11-26")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-11-26"), label = "Thanksgiving", vjust = -0.5,
@@ -471,23 +463,23 @@ epi_curve_test_date <- plot_data %>%
      geom_vline(xintercept = as.numeric(as.Date("2020-12-25")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-12-25"), label = "Christmas", vjust = -0.5,
-                 y = 70), colour = "black", angle = 90, text = element_text(size=14)) +
+                 y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2021-01-01")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2021-01-01"), label = "New Years", vjust = -0.5,
-                 y = 70), colour = "black", angle = 90, text = element_text(size=14)) +
+                 y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_label(aes(x = Sys.Date()-10, y = 125, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
-     labs(title = "COVID-19 Cases in Missoula County Since September 1, 2020",
+     labs(title = "COVID-19 Cases in Missoula County Since November 1, 2020",
           subtitle = paste0("Cases in plot = ", total_cases),
           fill = " ") +
      ylab("Number of Cases") +
      xlab("Test Date") +
-     scale_x_date(breaks = seq.Date(from = as.Date("2020-09-01"), 
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-11-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "3 days"),
-                  labels = seq.Date(from = as.Date("2020-09-01"), 
+                  labels = seq.Date(from = as.Date("2020-11-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "3 days"),
                   date_labels = "%d-%b") + 
@@ -525,7 +517,7 @@ epi_curve_test_date
 case_data <- covid_data %>% 
    rename(dates = test_date) %>% 
    filter(!is.na(dates)) %>% 
-   filter(dates > "2020-08-31" & dates < Sys.Date() - 13) %>% 
+   filter(dates > "2020-10-31" & dates < Sys.Date() - 13) %>% 
    arrange(dates) %>% 
    select(dates, case) %>% 
    arrange(dates) %>% 
@@ -576,7 +568,7 @@ county_r <- cbind(county_r, county_dates_new)
 
 
 county_r_plot <- county_r %>% 
-   filter(dates > "2020-08-31") %>% 
+   filter(dates > "2020-10-31") %>% 
    ggplot() +
    geom_line(aes(dates, mean_r), size = 1.5, color = "black") +
    #geom_line(aes(dates, cl_low), size = 1.5, color = "grey") +
@@ -639,17 +631,13 @@ epi_curve_full <- plot_data %>%
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-04-26"), label = "Phase 1 reopening", vjust = -0.5,
                  y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2020-06-01")), color = "black", 
+     geom_vline(xintercept = as.numeric(as.Date("2020-05-28")), color = "black", 
               size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-06-01"), label = "Phase 2 reopening", vjust = -0.5,
-                 y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_text(aes(x = as.Date("2020-05-28"), label = "Memorial Day + Phase 2 reopening", vjust = -0.5,
+                 y = 80), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-09-07")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-09-07"), label = "Labor Day", vjust = -0.5,
-                 y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2020-05-25")), color = "black", 
-              size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-05-25"), label = "Memorial Day", vjust = -0.5,
                  y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-07-06")), color = "black", 
               size = 1, linetype = "dashed") +
@@ -667,14 +655,10 @@ epi_curve_full <- plot_data %>%
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-11-26"), label = "Thanksgiving", vjust = -0.5,
                  y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2020-12-25")), color = "black", 
+     geom_vline(xintercept = as.numeric(as.Date("2020-12-28")), color = "black", 
               size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-12-25"), label = "Christmas", vjust = -0.5,
-                 y = 70), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2021-01-01")), color = "black", 
-              size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2021-01-01"), label = "New Years", vjust = -0.5,
-                 y = 70), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_text(aes(x = as.Date("2020-12-28"), label = "Christmas + New Years", vjust = -0.5,
+                 y = 80), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_label(aes(x = Sys.Date()-17, y = 120, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
