--- a/MCCHD_covid_figures_new.Rmd
+++ b/MCCHD_covid_figures_new.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of April 8, 2021"
+date: "Data as of April 19, 2021"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -662,7 +662,7 @@ epi_curve_full <- plot_data %>%
      geom_label(aes(x = Sys.Date()-17, y = 120, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
-     labs(title = "COVID-19 Cases in Missoula County by Date, 2020",
+     labs(title = "COVID-19 Cases in Missoula County by Date",
           subtitle = paste0("Total cases = ", total_cases),
           fill = " ") +
      ylab("Number of Cases") +
