--- a/MCCHD_breakthrough_reinfect_variant_figures.Rmd
+++ b/MCCHD_breakthrough_reinfect_variant_figures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Breakthrough, Reinfection, and Variant Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of July 27, 2021"
+date: "Data as of Aug 12, 2021"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -48,27 +48,28 @@ file_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
 
 
 variant_data_clean <- read_rds(paste0(input_path, "variant_data_clean.rds")) 
+
+colorblind_palette <- c("#88CCEE", "#CC6677", "#DDCC77", "#117733", "#332288", 
+                        "#44AA99", "#999933", "#882255", "Black", "#661100", 
+                        "#6699CC", "#AA4499", "#888888")
 ```
 
 
 ```{r}
 age_n <- variant_data_clean %>% 
    filter(!is.na(age_group)) %>% 
-   filter(reinfect_breakthrough_status == "Reinfection" |
-          reinfect_breakthrough_status == "Reinfection & Breakthrough") %>% 
-   filter(case_episode == "episode_2")
+   filter(case_episode == "Reinfection Original Case #:") 
 age_cases <- sum(age_n$case)
 
 # Age group bar plot - counts
 age_count_reinfect <- variant_data_clean %>% 
-   filter(reinfect_breakthrough_status == "Reinfection" |
-          reinfect_breakthrough_status == "Reinfection & Breakthrough") %>% 
-   filter(case_episode == "episode_2") %>% 
+   filter(!is.na(age_group)) %>% 
+   filter(case_episode == "Reinfection Original Case #:") %>% 
    mutate(age_group = as.character(age_group),
           age_group = if_else(is.na(age_group), "Unknown", age_group),
           age_group = as.factor(age_group)) %>% 
    ggplot() +   
-     geom_bar(aes(fct_rev(age_group), fill = reinfect_breakthrough_status), width = .6) +   
+     geom_bar(aes(fct_rev(age_group)), fill = "steelblue", width = .6) +   
      labs(title = "COVID-19 reinfection cases by age group",
           subtitle = paste0("Missoula County, since March 2020. N = ", age_cases, " cases."), 
           y = "Number of cases", x = "Age Group (years)",
@@ -102,29 +103,24 @@ age_count_reinfect
 ```{r}
 age_n <- variant_data_clean %>% 
    filter(!is.na(age_group)) %>% 
-   filter(reinfect_breakthrough_status == "Breakthrough" |
-          reinfect_breakthrough_status == "Reinfection & Breakthrough") %>% 
-   mutate(filter_indicator = if_else(reinfect_breakthrough_status == "Reinfection & Breakthrough" &
-                                     case_episode == "episode_2", 1, 0)) %>% 
-   filter(filter_indicator == 1 | reinfect_breakthrough_status == "Breakthrough")
+   filter(breakthrough == "yes") %>% 
+   distinct(row_id, .keep_all = T) 
 age_cases <- sum(age_n$case)
 
 # Age group bar plot - counts
 age_count_breakthrough <- variant_data_clean %>% 
-   filter(reinfect_breakthrough_status == "Breakthrough" |
-          reinfect_breakthrough_status == "Reinfection & Breakthrough") %>% 
-   mutate(filter_indicator = if_else(reinfect_breakthrough_status == "Reinfection & Breakthrough" &
-                                     case_episode == "episode_2", 1, 0)) %>% 
-   filter(filter_indicator == 1 | reinfect_breakthrough_status == "Breakthrough") %>% 
+   filter(!is.na(age_group)) %>% 
+   filter(breakthrough == "yes") %>% 
+   distinct(row_id, .keep_all = T)  %>% 
    mutate(age_group = as.character(age_group),
           age_group = if_else(is.na(age_group), "Unknown", age_group),
           age_group = as.factor(age_group)) %>% 
    ggplot() +   
-     geom_bar(aes(fct_rev(age_group), fill = reinfect_breakthrough_status), width = .6) +   
+     geom_bar(aes(fct_rev(age_group), fill = reinfect_breakthrough), width = .6) +   
      labs(title = "COVID-19 breakthrough cases by age group",
           subtitle = paste0("Missoula County, since March 2020. N = ", age_cases, " cases."), 
           y = "Number of cases", x = "Age Group (years)",
-          fill = "") +
+          fill = "Reinfection:") +
      scale_y_continuous(breaks = c(seq(0, 200, 2)), labels = c(seq(0, 200, 2))) +
      coord_flip() +
      theme_minimal() +
@@ -143,7 +139,8 @@ age_count_breakthrough <- variant_data_clean %>%
                                        margin = unit(c(5, 0, 0, 0), "mm")),
            axis.line.x = element_line(colour = "black", size = 1.2), 
            axis.line.y = element_line(colour = "black", size = 1.2), 
-           axis.ticks = element_line(colour = "black")) 
+           axis.ticks = element_line(colour = "black")) +
+     scale_fill_manual(values = colorblind_palette)
 age_count_breakthrough
 
 #ggsave("age_count_plot.jpg", width = 12, height = 6)
@@ -155,9 +152,13 @@ age_count_breakthrough
 # Epi curve - test date
 
 plot_data <- variant_data_clean %>% 
-   filter(reinfect_breakthrough_status == "Reinfection" |
-          reinfect_breakthrough_status == "Reinfection & Breakthrough") %>% 
-   mutate(case == 1)
+   group_by(row_id) %>% 
+   mutate(num_cases = n()) %>% 
+   filter(num_cases == 2) %>% 
+   mutate(case = 1,
+          case_episode2 = factor(case_episode,
+                                levels = c("Case #:", "Reinfection Original Case #:"),
+                                labels = c("Episode 2", "Episode 1")))
 
 total_cases <- sum(plot_data$case)
 date_today <- format(Sys.Date(), "%d %b %Y")
@@ -165,8 +166,8 @@ date_14 <- format(Sys.Date() - 14, "%d %b %Y")
 
 epi_curve_reinfect <- plot_data %>% 
    ggplot() +
-     geom_col(aes(test_date, case, fill = case_episode)) +
-     labs(title = "COVID-19 Cases in Missoula County Since January 1, 2021",
+     geom_col(aes(test_date, case, fill = case_episode2), width = 2) +
+     labs(title = "COVID-19 Reinfection Cases in Missoula County",
           subtitle = paste0("Cases in plot = ", total_cases),
           fill = " ") +
      ylab("Number of Cases") +
@@ -194,9 +195,66 @@ epi_curve_reinfect <- plot_data %>%
            legend.text = element_text(size = 12, colour = "black"),
            axis.line.x = element_blank(), 
            axis.line.y = element_blank(), 
-           axis.ticks = element_blank())  
+           axis.ticks = element_blank())  +
+     scale_fill_manual(values = colorblind_palette) 
 
 epi_curve_reinfect
+
+#ggsave("mc_epi_curve_test_date.jpg", width = 12, height = 5.5)
+```
+
+\pagebreak  
+
+```{r, fig.width = 10, fig.height = 5}
+# Epi curve - test date
+
+plot_data <- variant_data_clean %>% 
+   filter(breakthrough == "yes") %>% 
+   distinct(row_id, .keep_all = T) %>% 
+   mutate(case = 1,
+          variant = as.character(variant),
+          variant = if_else(is.na(variant), "None listed", variant),
+          variant = as.factor(variant))
+
+total_cases <- sum(plot_data$case)
+date_today <- format(Sys.Date(), "%d %b %Y")
+date_14 <- format(Sys.Date() - 14, "%d %b %Y")
+
+epi_curve_breakthrough <- plot_data %>% 
+   ggplot() +
+     geom_col(aes(test_date, case, fill = variant), width = 2) +
+     labs(title = "COVID-19 Breakthrough Cases in Missoula County",
+          subtitle = paste0("Cases in plot = ", total_cases),
+          fill = "Variant:") +
+     ylab("Number of Cases") +
+     xlab("Test Date") +
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "14 days"),
+                  labels = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "14 days"),
+                  date_labels = "%d-%b") +
+     scale_y_continuous(breaks = seq(0, 40, 2), labels = seq(0, 40, 2)) + 
+     theme_minimal() +
+     theme(strip.text = element_text(size = 16, colour = "black"),
+           title = element_text(size = 12, colour = "black"),
+           panel.grid = element_blank(),
+           panel.grid.major.y = element_line(colour = "gray75"),
+           axis.text.x = element_text(size = 12, colour = "black", 
+                                     angle = 90, vjust = 0.4),
+           axis.text.y = element_text(size = 12, colour = "black"),
+           axis.title.y = element_text(size = 12, colour = "black",
+                                       margin = unit(c(0, 5, 0, 0), "mm")),
+           axis.title.x = element_text(size = 12, colour = "black",
+                                       margin = unit(c(5, 0, 0, 0), "mm")),
+           legend.text = element_text(size = 12, colour = "black"),
+           axis.line.x = element_blank(), 
+           axis.line.y = element_blank(), 
+           axis.ticks = element_blank())  +
+     scale_fill_manual(values = colorblind_palette) 
+
+epi_curve_breakthrough
 
 #ggsave("mc_epi_curve_test_date.jpg", width = 12, height = 5.5)
 ```
